# Review-Driven-Development

./: .gitignore  AGENTS.md  CHANGESET.json  CODEX_COMPLETION_AND_REGISTRATION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EVALUATION_AND_UPDATES.md  GITHUB_UPLOAD_CHECKLIST.md  README.en.md  README.ko.md  README.md  REVIEW_NOTES.md  SECURITY.md  SKILL.md  SUPPORT.md  VALIDATION.md  external-skills.json  pyproject.toml
.codex/: hooks.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
agents/: openai.yaml
docs/: github-setup.md  license-choice.md
references/: codex-completion-and-registration.md  documentation-policy.md  external-skill-links.md  external-skills.generated.md  external-skills.json  external-skills.md  first-run-questionnaire.md  function-scaffold.md  hook-policy.md  internal-skill-map.md  minimal-solution-policy.md  model-routing-policy.json  model-routing.md  pro-review.md  script-contracts.md  state-schema.md  subagent-roles.md  todo-policy.md  workflow.md
scripts/: README.md  constants.py  context_inventory.py  critic_ledger.py  dependency_guard.py  doc_sync_check.py  external_skill_registry.py  minimal_solution_ladder.py  model_router.py  pro_review.py  quality_gate.py  rdd_commands.py  rdd_state.py  self_test.py  skill_registration.py  skill_registration_helper.py  subagent_brief_builder.py  todo_manager.py  toml_compat.py  validate_skill.py  workflow_runner.py
tests/: README.md  test_ci_workflow.py  test_dependency_guard.py  test_diff_budget.py  test_minimal_solution_ladder.py  test_model_router.py  test_pro_review.py  test_smoke_workflow.py  (+2 more)
(+58 files in other folders)
